Atualizar o Exercicio Usabilidade 20240312.html

--- a/HTML/Exercicio Usabilidade 20240312.html
+++ b/HTML/Exercicio Usabilidade 20240312.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kobe Bryant</title>
+    <title>Henrique Giribola</title>
 
 </head>
 
@@ -17,17 +17,17 @@
     <hr>
 
     <h2>Endereço:</h2>
-    <p>Diadema <br>Lago dos Patos <br>Rua dos Tupis, 765</p>
+    <p>São Paulo, SP <br>Penha de França <br>Rua Carolina Pavone</p>
 
     <h2>Contato:</h2>
-    <p>kobe.bbryantt@gmail.com <br>
+    <p>henrique.giribola@gmail.com <br>
     (21) 94384 0264</p>
 
     <hr>
 
     <h2>Histórico Profissional:</h2>
-    <p>Pizzaiolo - Pizzaria da Mooca - 2019 - 2021</p>
-    <p>Motoboy - iFood - 2022 - Atual</p>
+    <p>Assistente Comercial - 2021 - 2023</p>
+    <p>Analista de Dados - Atual</p>
 
     <hr>
 
@@ -36,13 +36,12 @@
 
     <h2>Idiomas:</h2>
     <p>Português <br>
-    Latim <br>
-    Nepalês <br>
-    Libras
+    Espanhol <br>
+    Ingles
     </p>
 
     <h2>Cursos Adicionais:</h2>
-    <p>Universidade Anhembi Morumbi (Mooca) - Atlética Gorilas - Tricot</p>
+    <p>Universidade Anhembi Morumbi - Excel</p>
     <p>Pós Graduação - Gastronomia - Le Cordon Bleu</p>
 
     <hr>
